--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,9 +1,1 @@
-:root {
-  /* color */
-  --button-color1: #e18213;
-  --button-color2: #feefda;
-  --button-color3: #e43801;
-  --bg-color1: #d7eaf8;
-  --navbar-color1: #2d3a5c;
-  --text-green: #2d5654;
-}
+@import "./var";
